B5 Ajustes alerta de hora

--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
             <div>
                 <img id="meme">
             </div>
+            <div>
+                <img id="imghuev">
+            </div>
+            <div id="horaactual">
+            </div>
 
         </div>
     </div>
