--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
             <div>
                 <img id="meme">
             </div>
-            <div>
-                <img id="imghuev">
+            <div id="imghuev">
             </div>
             <div id="horaactual">
             </div>
